estilo de menu alterado

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <header class="menu_principal">
             <div class="container">
-                <h1 class="menu_principal-titulo"><a href="#">Escola Dev</a></h1>
+                
+
 
                 <nav class="menu_principal-nav">
                     <a class="menu_principal-nav-link" href="#">Home</a>
@@ -23,6 +24,7 @@
             </div>
     </header>
 
+    <!– 
     <main class="conteudoPrincipal">
             <div class="container">
                 <h2 class="subtitulo">Nossos cursos</h2>
@@ -66,6 +68,6 @@
                 </div>
             </section>
     
-        </main>
+        </main> –>
 </body>
        </html>
